<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorProfile"
    tools:context="com.example.MentalHealth.Controller.PersonProfileActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/person_profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="200dp"
                android:text="@string/text_username"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/person_profile_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_profile_username"
                android:text="@string/text_first_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/person_profile_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_profile_first_name"
                android:text="@string/text_last_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/person_profile_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_profile_last_name"
                android:text="@string/text_location"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/person_profile_counsellor_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_profile_location"
                android:text="@string/text_code"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/person_profile_religion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_profile_counsellor_code"
                android:text="@string/text_religion"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/person_profile_ethnicity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_profile_religion"
                android:text="@string/text_ethnicity"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/person_profile_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_profile_ethnicity"
                android:text="@string/text_languages"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/person_profile_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_profile_languages"
                android:text="@string/text_gender"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <Button
                android:id="@+id/person_send_connection_request"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/person_profile_gender"
                android:layout_marginTop="45dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:text="SEND CONNECT REQUEST"/>

            <Button
                android:id="@+id/person_cancel_connection_request"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/person_send_connection_request"
                android:layout_marginTop="5dp"
                android:background="@color/colorRed"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:text="CANCEL CONNECT REQUEST"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
