<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.MentalHealth.Controller.ResetPasswordActivity">
<include
    android:id="@+id/forgot_password_toolbar"
    layout="@layout/app_bar_layout">
</include>

    <TextView
        android:id="@+id/textViewResetPasswordInfo"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="250dp"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="#00010A"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextResetPasswordEmail"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="315dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="221dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/button_reset_password"
        android:textSize="18sp" />


</RelativeLayout>
